# bitwarden-secrets-operator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  crd.yaml  login.sh  renovate.json  repositories
.github/: dependabot.yml
.github/workflows/: docker-image.yml
examples/: crd.yaml  object.yaml  operator.yaml
src/: bitwarden.rs  main.rs  prometheus.rs
