[package]
name = "bitwarden-secrets-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
axum = "0.7.9"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
dirs = "5.0.1"
futures = "0.3.31"
gethostname = "0.5.0"
k8s-openapi = { version = "0.23.0", features = ["v1_28"] }
kube = { version = "0.97.0", features = ["runtime", "derive"] }
kube-leader-election = "0.38.0"
lazy_static = "1.5.0"
prometheus = { version = "0.13.4" , features = ["process"] }
regex = "1.11.1"
schemars = "0.8.21"
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.33"
thiserror = "2.0.8"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
