[package]
name = "bitwarden-secrets-operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.96"
axum = "0.8.2"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive", "env"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
dirs = "6.0.0"
futures = "0.3.31"
gethostname = "1.0.0"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
kube-leader-election = "0.39.0"
lazy_static = "1.5.0"
prometheus = { version = "0.13.4" , features = ["process"] }
regex = "1.11.1"
schemars = "0.8.22"
serde = "1.0.218"
serde_json = "1.0.139"
serde_yaml = "0.9.33"
thiserror = "2.0.12"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
